--- a/css/style.css
+++ b/css/style.css
@@ -287,7 +287,7 @@ html.boxed body {
 }
 
 .text-primary {
-    color: #fde231
+    color: #31fdb2
 }
 
 *+p {
@@ -886,7 +886,7 @@ html [class*=section-].section-bottom-0 {
 }
 
 .bg-primary {
-    background-color: #fde231
+    background-color: #31fdb2
 }
 
 .bg-image {
@@ -1039,7 +1039,7 @@ p.rights a {
 }
 
 p.rights a:hover {
-    color: #fde231
+    color: #31fdb2
 }
 
 [style*='z-index: 1000;'] {
@@ -1259,7 +1259,7 @@ h4 a:hover,
 h5 a:hover,
 h6 a:hover,
 [class^=heading-] a:hover {
-    color: #fde231
+    color: #31fdb2
 }
 
 h1,
@@ -1414,7 +1414,7 @@ mark,
 .mark {
     padding: 3px 5px;
     color: #fff;
-    background: #fde231
+    background: #31fdb2
 }
 
 .big {
@@ -1439,7 +1439,7 @@ code {
 p [data-toggle=tooltip] {
     padding-left: .25em;
     padding-right: .25em;
-    color: #fde231
+    color: #31fdb2
 }
 
 p [style*=max-width] {
@@ -1447,17 +1447,17 @@ p [style*=max-width] {
 }
 
 ::-moz-selection {
-    background: #fde231;
+    background: #31fdb2;
     color: #fff
 }
 
 ::selection {
-    background: #fde231;
+    background: #31fdb2;
     color: #fff
 }
 
 ::-moz-selection {
-    background: #fde231;
+    background: #31fdb2;
     color: #fff
 }
 
@@ -1500,7 +1500,7 @@ p [style*=max-width] {
 .title-style-1 {
     letter-spacing: .075em;
     padding: 8px 20px 0;
-    background: #fde231
+    background: #31fdb2
 }
 
 .title-style-2 {
@@ -1576,7 +1576,7 @@ a:active {
 }
 
 a:hover {
-    color: #fde231
+    color: #31fdb2
 }
 
 a[href*=tel],
@@ -1585,11 +1585,11 @@ a[href*=mailto] {
 }
 
 .link-hover {
-    color: #fde231
+    color: #31fdb2
 }
 
 .link-press {
-    color: #fde231
+    color: #31fdb2
 }
 
 .privacy-link {
@@ -1614,7 +1614,7 @@ a[href*=mailto] {
 .link-tag,
 .link-tag:active,
 .link-tag:focus {
-    background: #fde231
+    background: #31fdb2
 }
 
 .link-tag:hover {
@@ -1642,7 +1642,7 @@ a[href*=mailto] {
 }
 
 .block-center:hover .block-center-header {
-    background-color: #fde231
+    background-color: #31fdb2
 }
 
 .block-center-title {
@@ -1657,7 +1657,7 @@ a[href*=mailto] {
         background-color: #fff
     }
     .block-center-header {
-        background-color: #fde231
+        background-color: #31fdb2
     }
 }
 
@@ -1715,7 +1715,7 @@ a[href*=mailto] {
     left: 0;
     transition: all .3s ease;
     pointer-events: none;
-    background: rgba(253, 226, 49, .85)
+    background:#31fdb2
 }
 
 .team-classic-caption>* {
@@ -1796,7 +1796,7 @@ a[href*=mailto] {
         box-shadow: 0 6px 24px 0 rgba(0, 0, 0, .15)
     }
     .desktop .team-classic:hover .team-classic-caption {
-        background: rgba(253, 226, 49, .85)
+        background: #31fdb2
     }
     .desktop .team-classic:hover .team-classic-list-social li,
     .desktop .team-classic:hover .team-classic-status,
@@ -1922,7 +1922,7 @@ a[href*=mailto] {
 
 .project-classic-caption {
     padding: 5px;
-    background: #fde231;
+    background: #31fdb2;
     transition: all .3s ease;
     pointer-events: none
 }
@@ -1983,7 +1983,7 @@ a[href*=mailto] {
         box-shadow: 0 6px 24px 0 rgba(0, 0, 0, .15)
     }
     .desktop .project-classic:hover .project-classic-caption {
-        background: rgba(253, 226, 49, .85)
+        background: #31fdb2
     }
     .desktop .project-classic:hover .project-classic-tag,
     .desktop .project-classic:hover .project-classic-title {
@@ -2011,7 +2011,7 @@ a[href*=mailto] {
 }
 
 .contacts-classic a:hover {
-    color: #fde231
+    color: #31fdb2
 }
 
 .contacts-classic .list-social a {
@@ -2072,7 +2072,7 @@ a[href*=mailto] {
     vertical-align: middle;
     font-size: 40px;
     line-height: 1;
-    color: #fde231;
+    color: #31fdb2;
     z-index: 1
 }
 
@@ -2157,7 +2157,7 @@ a[href*=mailto] {
     }
     .desktop .contacts-modern:hover {
         border-color: transparent;
-        background: #fde231;
+        background: #31fdb2;
         box-shadow: 0 6px 24px 0 rgba(0, 0, 0, .15)
     }
 }
@@ -2189,7 +2189,7 @@ a[href*=mailto] {
 }
 
 .box-comment-author a:hover {
-    color: #fde231
+    color: #31fdb2
 }
 
 .box-comment-time {
@@ -2699,7 +2699,7 @@ p+.list-marked {
     bottom: -1px;
     left: -1px;
     border-radius: inherit;
-    background: #fde231;
+    background: #31fdb2;
     transition: inherit;
     -webkit-transform: scale(0);
     transform: scale(0);
@@ -2749,7 +2749,7 @@ p+.list-marked {
 .list-style-1 a:hover {
     color: #111;
     padding: 0 5px;
-    background: #fde231
+    background: #31fdb2
 }
 
 .list-style-1 li+li {
@@ -2918,7 +2918,7 @@ img {
 
 .table-custom.table-custom-primary thead th {
     color: #fff;
-    background: #fde231;
+    background: #31fdb2;
     border: 0
 }
 
@@ -2990,7 +2990,7 @@ hr {
     display: inline-block;
     width: 60px;
     height: 2px;
-    background-color: #fde231
+    background-color: #31fdb2
 }
 
 .button {
@@ -3052,7 +3052,7 @@ hr {
 
 .button-default::before,
 .button-default:focus::before {
-    background-color: #fde231
+    background-color: #31fdb2
 }
 
 .button-default:hover,
@@ -3063,7 +3063,7 @@ hr {
 }
 
 .button-default.button-ujarak::before {
-    background: #fde231
+    background: #31fdb2
 }
 
 .button-gray-100,
@@ -3092,8 +3092,8 @@ hr {
 .button-primary,
 .button-primary:focus {
     color: #fff;
-    border-color: #fde231;
-    background-color: #fde231
+    border-color: #31fdb2;
+    background-color: #31fdb2
 }
 
 .button-primary::before,
@@ -3121,18 +3121,18 @@ hr {
 
 .button-default-outline::before,
 .button-default-outline:focus::before {
-    background-color: #fde231
+    background-color: #31fdb2
 }
 
 .button-default-outline:hover,
 .button-default-outline:active,
 .button-default-outline.active {
     color: #fff;
-    border-color: #fde231
+    border-color: #31fdb2
 }
 
 .button-default-outline.button-ujarak::before {
-    background: #fde231
+    background: #31fdb2
 }
 
 .button-ghost {
@@ -3142,7 +3142,7 @@ hr {
 
 .button-ghost:hover {
     color: #fff;
-    background: #fde231
+    background: #31fdb2
 }
 
 .button-facebook,
@@ -3240,7 +3240,7 @@ hr {
     left: 0;
     width: 100%;
     height: 100%;
-    background: #fde231;
+    background: #31fdb2;
     z-index: -1;
     opacity: 0;
     -webkit-transform: scale3d(.7, 1, 1);
@@ -3366,8 +3366,8 @@ hr {
 .btn-primary:active,
 .btn-primary:focus {
     color: #fff;
-    background: #fde231;
-    border-color: #fde231
+    background: #31fdb2;
+    border-color: #31fdb2
 }
 
 .btn-primary:hover {
@@ -3405,7 +3405,7 @@ input:-webkit-autofill~.form-validation {
 }
 
 .form-wrap.has-focus .form-input {
-    border-color: #fde231
+    border-color: #31fdb2
 }
 
 *+.form-wrap {
@@ -3713,7 +3713,7 @@ textarea.form-input {
 }
 
 .toggle-custom:checked~.checkbox-custom-dummy::after {
-    background: #fde231;
+    background: #31fdb2;
     -webkit-transform: translate(20px, -50%);
     transform: translate(20px, -50%)
 }
@@ -3864,7 +3864,7 @@ textarea.form-input {
 }
 
 .button-search:hover {
-    color: #fde231
+    color: #31fdb2
 }
 
 .form-search .form-label,
@@ -3953,7 +3953,7 @@ textarea.form-input {
     }
     .desktop .post-classic:hover {
         border-color: transparent;
-        background: #fde231;
+        background: #31fdb2;
         box-shadow: 0 6px 24px 0 rgba(0, 0, 0, .15)
     }
 }
@@ -3970,7 +3970,7 @@ textarea.form-input {
 
 .post-minimal-figure {
     display: block;
-    background: #fde231
+    background: #31fdb2
 }
 
 .post-minimal-figure img {
@@ -4146,7 +4146,7 @@ textarea.form-input {
     display: block;
     width: 37px;
     height: 27px;
-    fill: #fde231;
+    fill: #31fdb2;
     -ms-flex-negative: 0;
     flex-shrink: 0
 }
@@ -4255,7 +4255,7 @@ textarea.form-input {
 .breadcrumbs-custom-path a,
 .breadcrumbs-custom-path a:active,
 .breadcrumbs-custom-path a:focus {
-    color: #fde231
+    color: #31fdb2
 }
 
 .breadcrumbs-custom-path li {
@@ -4380,8 +4380,8 @@ textarea.form-input {
 .page-link:focus,
 .page-link:active {
     color: #fff;
-    background-color: #fde231;
-    border-color: #fde231
+    background-color: #31fdb2;
+    border-color: #31fdb2
 }
 
 .page-item.active>.page-link,
@@ -4389,8 +4389,8 @@ textarea.form-input {
 .page-item.active>.page-link:focus,
 .page-item.active>.page-link:active {
     color: #fff;
-    background-color: #fde231;
-    border-color: #fde231
+    background-color: #31fdb2;
+    border-color: #31fdb2
 }
 
 .page-item.disabled>.page-link,
@@ -4925,7 +4925,7 @@ html:not(.lt-ie10) .not-animated {
 }
 
 .cssload-cube {
-    background-color: #fde231;
+    background-color: #31fdb2;
     width: 15px;
     height: 15px;
     margin-left: 10px;
@@ -5061,7 +5061,7 @@ html:not(.lt-ie10) .not-animated {
 .ui-to-top,
 .ui-to-top:focus {
     color: #111;
-    background: #fde231
+    background: #31fdb2
 }
 
 .ui-to-top:hover {
@@ -5328,7 +5328,7 @@ html.tablet .ui-to-top {
 }
 
 .rd-navbar-search .rd-search-form-submit:hover {
-    color: #fde231
+    color: #31fdb2
 }
 
 .rd-navbar-search-toggle {
@@ -5361,22 +5361,22 @@ html.tablet .ui-to-top {
 
 .rd-navbar-static .rd-nav-item.focus .rd-nav-link,
 .rd-navbar-static .rd-nav-item.opened .rd-nav-link {
-    color: #fde231;
+    color: #31fdb2;
     background: 0 0
 }
 
 .rd-navbar-static .rd-nav-item.focus>.rd-navbar-submenu-toggle,
 .rd-navbar-static .rd-nav-item.opened>.rd-navbar-submenu-toggle {
-    color: #fde231
+    color: #31fdb2
 }
 
 .rd-navbar-static .rd-nav-item.active .rd-nav-link {
-    color: #fde231;
+    color: #31fdb2;
     background: 0 0
 }
 
 .rd-navbar-static .rd-nav-item.active>.rd-navbar-submenu-toggle {
-    color: #fde231
+    color: #31fdb2
 }
 
 .rd-navbar-static .rd-nav-item.focus>.rd-navbar-submenu-toggle::before,
@@ -5401,7 +5401,7 @@ html.tablet .ui-to-top {
 }
 
 .rd-navbar-static .rd-nav-item>.rd-navbar-submenu-toggle:hover {
-    color: #fde231
+    color: #31fdb2
 }
 
 .rd-navbar-static .rd-nav-item>.rd-navbar-submenu {
@@ -5422,7 +5422,7 @@ html.tablet .ui-to-top {
 }
 
 .rd-navbar-static .rd-nav-link:hover {
-    color: #fde231
+    color: #31fdb2
 }
 
 .rd-navbar-static .rd-menu {
@@ -5468,7 +5468,7 @@ html.tablet .ui-to-top {
 
 .rd-navbar-static .rd-dropdown-item.focus .rd-dropdown-link,
 .rd-navbar-static .rd-dropdown-item.opened .rd-dropdown-link {
-    color: #fde231
+    color: #31fdb2
 }
 
 .rd-navbar-static .rd-dropdown-link {
@@ -5476,7 +5476,7 @@ html.tablet .ui-to-top {
 }
 
 .rd-navbar-static .rd-dropdown-link:hover {
-    color: #fde231
+    color: #31fdb2
 }
 
 .rd-navbar-static .rd-navbar-dropdown li>a,
@@ -5500,7 +5500,7 @@ html.tablet .ui-to-top {
 
 .rd-navbar-static .rd-navbar-dropdown li>a:hover,
 .rd-navbar-static .rd-megamenu-list li>a:hover {
-    color: #fde231
+    color: #31fdb2
 }
 
 .rd-navbar-static .rd-navbar-dropdown li>a,
@@ -5520,7 +5520,7 @@ html.tablet .ui-to-top {
     font-family: fontawesome;
     font-size: inherit;
     line-height: inherit;
-    color: #fde231;
+    color: #31fdb2;
     opacity: 0;
     visibility: hidden
 }
@@ -5583,7 +5583,7 @@ html.tablet .ui-to-top {
 }
 
 .rd-navbar-static .rd-megamenu-list-link:hover {
-    color: #fde231;
+    color: #31fdb2;
     background: 0 0
 }
 
@@ -5689,7 +5689,7 @@ html.tablet .ui-to-top {
 }
 
 .rd-navbar-static .rd-navbar-search-toggle:hover {
-    color: #fde231
+    color: #31fdb2
 }
 
 .rd-navbar-static.rd-navbar--is-clone {
@@ -5786,7 +5786,7 @@ html.tablet .ui-to-top {
 }
 
 .rd-navbar-fixed .rd-navbar-nav-wrap::-webkit-scrollbar-track {
-    background: #fde231;
+    background: #31fdb2;
     border: none;
     border-radius: 0
 }
@@ -6126,7 +6126,7 @@ html.tablet .ui-to-top {
 .rd-navbar-fixed .rd-nav-item.active .rd-nav-link,
 .rd-navbar-fixed .rd-nav-item.opened .rd-nav-link {
     color: #fff;
-    background: #fde231
+    background: #31fdb2
 }
 
 .rd-navbar-fixed .rd-nav-item:hover>.rd-navbar-submenu-toggle,
@@ -6154,7 +6154,7 @@ html.tablet .ui-to-top {
 .rd-navbar-fixed .rd-navbar-dropdown>li.active>a,
 .rd-navbar-fixed .rd-navbar-dropdown>li.opened>a {
     color: #fff;
-    background: #fde231
+    background: #31fdb2
 }
 
 .rd-navbar-fixed .rd-navbar-megamenu .rd-megamenu-title {
@@ -6172,7 +6172,7 @@ html.tablet .ui-to-top {
 }
 
 .rd-navbar-fixed .rd-navbar-megamenu .rd-megamenu-title a:hover {
-    color: #fde231
+    color: #31fdb2
 }
 
 .rd-navbar-fixed .rd-navbar-submenu-toggle {
@@ -6184,7 +6184,7 @@ html.tablet .ui-to-top {
 }
 
 .rd-navbar-fixed .rd-navbar-search .rd-search-form-submit:hover {
-    color: #fde231
+    color: #31fdb2
 }
 
 .rd-navbar-fixed .rd-navbar-search-toggle {
@@ -6192,7 +6192,7 @@ html.tablet .ui-to-top {
 }
 
 .rd-navbar-fixed .rd-navbar-search-toggle:hover {
-    color: #fde231
+    color: #31fdb2
 }
 
 .rd-navbar-fixed .rd-navbar-collapse {
@@ -6241,7 +6241,7 @@ html.rd-navbar-fixed-linked .page {
     width: 50px;
     height: 50px;
     line-height: 50px;
-    background: #fde231;
+    background: #31fdb2;
     border-radius: 50%;
     z-index: 1102
 }
@@ -6351,7 +6351,7 @@ html.rd-navbar-fixed-linked .page {
 .rd-navbar-sidebar .rd-nav-item.active .rd-nav-link::before {
     -webkit-transform: none;
     transform: none;
-    background: #fde231
+    background: #31fdb2
 }
 
 .rd-navbar-sidebar .rd-nav-item+.rd-nav-item {
@@ -6407,7 +6407,7 @@ html.rd-navbar-fixed-linked .page {
 .rd-navbar-sidebar .rd-nav-link:hover::before {
     -webkit-transform: none;
     transform: none;
-    background: #fde231
+    background: #31fdb2
 }
 
 @media(min-width:768px) {
@@ -6484,7 +6484,7 @@ html.rd-navbar-fixed-linked .page {
 
 .rd-navbar-sidebar .rd-nav-item>.rd-navbar-submenu-toggle:hover,
 .rd-navbar-sidebar .rd-nav-item .rd-navbar--has-dropdown>.rd-navbar-submenu-toggle:hover {
-    color: #fde231
+    color: #31fdb2
 }
 
 .rd-navbar-sidebar .rd-nav-item>.rd-navbar-submenu-toggle::after,
@@ -6538,7 +6538,7 @@ html.rd-navbar-fixed-linked .page {
 
 .rd-navbar-sidebar .rd-navbar-dropdown li>a:hover,
 .rd-navbar-sidebar .rd-megamenu-list li>a:hover {
-    color: #fde231
+    color: #31fdb2
 }
 
 .rd-navbar-sidebar .rd-navbar-dropdown li>a,
@@ -6558,7 +6558,7 @@ html.rd-navbar-fixed-linked .page {
     font-family: fontawesome;
     font-size: inherit;
     line-height: inherit;
-    color: #fde231;
+    color: #31fdb2;
     opacity: 0;
     visibility: hidden
 }
@@ -6629,7 +6629,7 @@ html.rd-navbar-fixed-linked .page {
 }
 
 .rd-navbar-sidebar .rd-navbar-dropdown .rd-navbar--has-dropdown.opened>.rd-navbar-submenu-toggle {
-    color: #fde231
+    color: #31fdb2
 }
 
 .rd-navbar-sidebar .rd-navbar-dropdown .rd-navbar--has-dropdown.opened>.rd-navbar-submenu-toggle::after {
@@ -7009,7 +7009,7 @@ html.rd-navbar-fixed-linked .page {
 
 .swiper-button-prev:hover,
 .swiper-button-next:hover {
-    color: #fde231
+    color: #31fdb2
 }
 
 @media(min-width:768px) {
@@ -7223,7 +7223,7 @@ html.rd-navbar-fixed-linked .page {
 }
 
 .rd-search-results-live .search-link:hover {
-    color: #fde231
+    color: #31fdb2
 }
 
 .rd-search-results-live .search-error {
@@ -7240,7 +7240,7 @@ html.rd-navbar-fixed-linked .page {
 }
 
 .rd-search-results-live .search-title a:hover {
-    color: #fde231
+    color: #31fdb2
 }
 
 .rd-search-results-live .search-list-item-all {
@@ -7261,7 +7261,7 @@ html.rd-navbar-fixed-linked .page {
     text-transform: none;
     text-align: center;
     color: #fff;
-    background: #fde231
+    background: #31fdb2
 }
 
 .rd-search-results-live .search-submit:hover {
@@ -7349,7 +7349,7 @@ html.rd-navbar-fixed-linked .page {
 .rd-search-results .search {
     color: #fff;
     padding: 0 .25em;
-    background: #fde231
+    background: #31fdb2
 }
 
 .rd-search-results .match {
@@ -7454,7 +7454,7 @@ html.rd-navbar-fixed-linked .page {
 }
 
 .rd-search-classic .rd-search-submit:hover {
-    color: #fde231
+    color: #31fdb2
 }
 
 .rd-search.rd-search-inline {
@@ -7484,7 +7484,7 @@ html.rd-navbar-fixed-linked .page {
 }
 
 .rd-search.rd-search-inline .button-link:hover {
-    color: #fde231
+    color: #31fdb2
 }
 
 .rd-search.rd-search-inline.form-sm .form-input {
@@ -7645,8 +7645,8 @@ html.rd-navbar-fixed-linked .page {
     .tabs-line .nav-link:hover,
     .tabs-line .nav-link.active {
         color: #fff;
-        background: #fde231;
-        border-color: #fde231
+        background: #31fdb2;
+        border-color: #31fdb2
     }
 }
 
@@ -7679,8 +7679,8 @@ html.rd-navbar-fixed-linked .page {
 .tabs-corporate .nav-link:hover,
 .tabs-corporate .nav-link.active {
     color: #fff;
-    background: #fde231;
-    border-color: #fde231
+    background: #31fdb2;
+    border-color: #31fdb2
 }
 
 .tabs-corporate .tab-content {
@@ -7738,12 +7738,12 @@ html.rd-navbar-fixed-linked .page {
         transition: transform .4s, opacity .4s;
         transition: transform .4s, opacity .4s, -webkit-transform .4s;
         transition-timing-function: cubic-bezier(.2, 1, .3, 1);
-        background: #fde231
+        background: #31fdb2
     }
     .tabs-horizontal.tabs-corporate .nav-link.active,
     .tabs-horizontal.tabs-corporate .nav-link:hover {
         color: #fff;
-        border-color: #fde231;
+        border-color: #31fdb2;
         background-color: transparent
     }
     .tabs-horizontal.tabs-corporate .nav-link.active::before,
@@ -7776,7 +7776,7 @@ html.rd-navbar-fixed-linked .page {
         left: 0;
         height: 4px;
         width: 0;
-        background: #fde231;
+        background: #31fdb2;
         transition: .22s ease
     }
     .tabs-horizontal.tabs-line .nav-link.active,
@@ -7958,7 +7958,7 @@ html.rd-navbar-fixed-linked .page {
     right: -1px;
     z-index: 2;
     width: 70px;
-    background: #fde231;
+    background: #31fdb2;
     border-radius: 0 6px 0 0;
     transition: .33s all ease
 }
@@ -8016,11 +8016,11 @@ html.rd-navbar-fixed-linked .page {
 }
 
 .tooltip.bs-tooltip-top .arrow::before {
-    border-top-color: #fde231
+    border-top-color: #31fdb2
 }
 
 .tooltip.bs-tooltip-bottom .arrow::before {
-    border-bottom-color: #fde231
+    border-bottom-color: #31fdb2
 }
 
 .progress-linear {
@@ -8056,7 +8056,7 @@ html.rd-navbar-fixed-linked .page {
 .progress-linear .progress-bar-linear {
     width: 0;
     height: inherit;
-    background: #fde231;
+    background: #31fdb2;
     transition: 1s all ease-in-out
 }
 
@@ -8398,7 +8398,7 @@ html.rd-navbar-fixed-linked .page {
 
 .owl-prev:hover,
 .owl-next:hover {
-    color: #fde231
+    color: #31fdb2
 }
 
 @media(min-width:992px) {
